# mediapipe-test

./: README.md  main.py  pyproject.toml  tox.ini
src/: args.py  data_format.py  main.py  udp_client.py
