[project]
name = "mediapipe-test"
version = "0.1.0"
description = "Add your description here"
authors = [
  { name = "OJII3", email = "84656786+OJII3@users.noreply.github.com" },
]
dependencies = [
    "mediapipe>=0.10.5",
    "tox>=4.11.3",
    "pylance>=0.7.5",
    "isort>=5.12.0",
    "flake8>=5.0.4",
    "black>=23.9.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
